WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38702
[chromium] clear out more deprecated methods that are no longer used by chromium
https://bugs.webkit.org/show_bug.cgi?id=38702
Summary
[chromium] clear out more deprecated methods that are no longer used by chromium
Darin Fisher (:fishd, Google)
Reported
2010-05-06 15:55:01 PDT
[chromium] clear out more deprecated methods that are no longer used by chromium
Attachments
v1 patch
(4.35 KB, patch)
2010-05-07 09:14 PDT
,
Darin Fisher (:fishd, Google)
dglazkov
: review+
fishd
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2010-05-07 09:14:20 PDT
Created
attachment 55382
[details]
v1 patch Depends on
http://codereview.chromium.org/1985008/show
Dimitri Glazkov (Google)
Comment 2
2010-05-07 09:28:25 PDT
Comment on
attachment 55382
[details]
v1 patch ok.
Darin Fisher (:fishd, Google)
Comment 3
2010-05-07 12:59:04 PDT
Landed as
http://trac.webkit.org/changeset/58967
WebKit Review Bot
Comment 4
2010-05-07 13:10:38 PDT
http://trac.webkit.org/changeset/58967
might have broken Chromium Linux Release The following changes are on the blame list:
http://trac.webkit.org/changeset/58966
http://trac.webkit.org/changeset/58967
Darin Fisher (:fishd, Google)
Comment 5
2010-05-07 13:17:00 PDT
Yup, it was 58967. The fix was made upstream to chromium.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug