2010-05-07  Darin Fisher  <darin@chromium.org>

Reviewed by Dimitri Glazkov.

        [chromium] clear out more deprecated methods that are no longer used
        https://bugs.webkit.org/show_bug.cgi?id=38702

        * public/WebFrame.h:
        * public/WebNode.h:
        * src/WebFrameImpl.cpp:
        * src/WebFrameImpl.h:
        * src/WebNode.cpp:



Canonical link: https://commits.webkit.org/50213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58967 268f45cc-cd09-0410-ab3c-d52691b4dbfc